# gbc_emulator

./: Cargo.toml  README.md
src/: gbc.rs  gui.rs  main.rs  util.rs
src/gbc/: cpu.rs  delay_action.rs  dma_controller.rs  interrupt_controller.rs  lcd_controller.rs  memory.rs  render_engine.rs  timer_controller.rs  virtual_memory.rs
src/gbc/cpu/: cb_instruction_impl.rs  instruction.rs  instruction_impl.rs  instructions.rs  op_code.rs  op_helpers.rs  register.rs
src/gbc/render_engine/: color_value.rs  pixel_fetcher.rs
src/gbc/virtual_memory/: memory_area.rs  memory_bank_controller.rs
tools/: generate_instructions.py
