[package]
name = "gbc_emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-map = "2.4.1"
num-traits = "0.2.15"
int-enum = "0.5.0"

# Need latest eframe because release 0.20.1 crashes
eframe = "0.21.0"
egui_extras = {version="0.21.0", features = ["image"]}

rfd = "0.10.0"
color-eyre = "0.6.2"

tracing = "0.1.37"
tracing-subscriber = "0.3.16"

# Optimize dependencies in debug builds:
[profile.dev.package."*"]
opt-level = 2

[profile.dev.package.backtrace]
opt-level = 3

